# neovim

./: CMakeLists.txt  build-cmd.sh  build-exe.sh  build-expr.bash  build-expr.sh  clint-ignored-files.txt
.ci/: build.bat
.ci/common/: test.sh
cmake/: FindLibMpack.cmake  RunUnittests.cmake
config/: config.h.in
contrib/YouCompleteMe/: ycm_extra_conf.py
runtime/doc/: if_pyth.txt
scripts/: cmd  gen_events.lua  gendeclarations.lua  gendispatch.lua  generate_vim_module.lua  msgpack-gen.lua  test_translator.lua  test_translator.sh  translator  unittest.sh
src/: .asan-blacklist  .clang-format  CMakeLists.txt  ascii.h  charset.c  charset.h  clint.py  cmd  cmd-main.c  cmd.c  cmd.h  cmd_arg_constants.h  cmd_def.h  cmd_funcs.c  cmd_funcs.h  eval.c  ex_cmds_defs.h  ex_docmd.c  expr-main.c  expr.c  expr.h  garray.c  getchar.c  globals.h  keymap.c  keymap.h  main.c  main.h  mbyte.c  mbyte.h  memory.h  menu.c  menu.h  misc1.h  misc2.h  option.c  option_defs.h  strings.h  syntax.c  term.c  (+3 more)
src/nvim/: CMakeLists.txt  ascii.h  auevents.lua  buffer.c  buffer.h  buffer_defs.h  bufhl_defs.h  charset.c  charset.h  cmd.c  cmd.h  cmd_arg_constants.h  cmd_def.h  diff.c  edit.c  eval.c  ex_cmds.c  ex_cmds.h  ex_cmds2.c  ex_cmds_defs.h  ex_docmd.c  ex_eval.h  ex_getln.c  ex_getln.h  expr.c  expr.h  file_search.c  fileio.c  fold.h  getchar.c  globals.h  hardcopy.c  hashtab.c  if_cscope.c  keymap.c  keymap.h  macros.h  main.c  main.h  mark.c  (+39 more)
src/nvim/api/: buffer.c  ref.c  ref.h  vim.c
src/nvim/api/private/: defs.h  handle.c  handle.h  helpers.c  helpers.h  obj_stream.c  obj_stream.h  objstream.c  objstream.h
src/nvim/eval/: decode.c  encode.c  encode.h  executor.c  typval.c  typval.h  typval_encode.c.h  typval_encode.h
src/nvim/event/: loop.c  loop.h  loop_defs.h  multiqueue.h  multiqueue_defs.h  process.h
src/nvim/lib/: khash.h
src/nvim/msgpack_rpc/: channel.c  defs.h  helpers.c  remote_ui.c
src/nvim/os/: env.c  fs.c  input.c  time.h  time_defs.h
src/nvim/translator/executor/: converter.c  converter.h  exe-main.c  executor.c  executor.h  vim.lua
src/nvim/translator/parser/: cmd-main.c  command_arguments.h  command_definitions.h  ex_commands.c  ex_commands.h  expr-main.c  expressions.c  expressions.h
src/nvim/translator/printer/: ch_macros.h  ex_commands.c  ex_commands.c.h  ex_commands.h  expressions.c  expressions.c.h  expressions.h  printer.h
src/nvim/translator/testhelpers/: fgetline.c  fgetline.h  parser.c  parser.h  translator.c  translator.h
src/nvim/translator/translator/: translator.c  translator.h  vim.lua
src/nvim/tui/: input.c
src/nvim/viml/: viml.c  viml.h
src/nvim/viml/dumpers/: ch_macros.h  dumpers.c  dumpers.h
src/nvim/viml/executor/: converter.c  exe-main.c  executor.c  executor.h  vim.lua
src/nvim/viml/parser/: command_arguments.h  command_definitions.h  ex_commands.c  ex_commands.h  expr-main.c  expressions.c  expressions.h
src/nvim/viml/printer/: ch_macros.h  ex_commands.c  ex_commands.c.h  ex_commands.h  expressions.c  expressions.c.h  expressions.h  printer.h
src/nvim/viml/testhelpers/: executor.c  fgetline.c  fgetline.h  object.c  object.c.h  parser.c  parser.h  translator.c  translator.h
src/nvim/viml/testhelpers/progs/: cmd-main.c  exe-main.c  expr-main.c  init.c  trans-main.c
src/nvim/viml/translator/: translator.c  translator.c.h  translator.h
src/translator/parser/: command_arguments.h  command_definitions.h  ex_commands.c  ex_commands.h  expr-main.c  expressions.c  expressions.h
src/translator/printer/: ch_macros.h  ex_commands.c  ex_commands.c.h  ex_commands.h  expressions.c  expressions.c.h  expressions.h  printer.h
src/translator/testhelpers/: fgetline.c  parser.c  translator.c
src/translator/translator/: translator.c  translator.h  vim.lua
test/: helpers.lua
test/config/: paths.lua
test/functional/: helpers.lua
test/functional/api/: buffer_spec.lua
test/functional/eval/: buf_functions_spec.lua  null_spec.lua  string_spec.lua
test/functional/ex_cmds/: dict_notifications_spec.lua
test/functional/legacy/: quickfix_spec.lua
test/functional/viml/: completion_spec.lua
test/symbolic/klee/: viml_expressions_parser.c
test/unit/: cmd-parser.moon  expr-parser.lua  expr-parser.moon  helpers.lua  helpers.moon  misc1.moon  strings_spec.lua
test/unit/eval/: helpers.lua  typval_spec.lua
test/unit/os/: users.moon
test/unit/translator/parser/: cmd-errors.moon  cmd.moon  cmd2.moon  expr.moon  helpers.moon
test/unit/viml/executor/: assignments.lua  assignments_spec.lua  blocks.lua  blocks_spec.lua  commands_spec.lua  functions_spec.lua  helpers.lua  operators.lua  operators_spec.lua  types_spec.lua
test/unit/viml/expressions/: parser_spec.lua
test/unit/viml/parser/: cmd-errors.lua  cmd-errors_spec.lua  cmd-errors_spec.moon  cmd.moon  cmd2_spec.lua  cmd2_spec.moon  cmd_spec.lua  expr.lua  expr.moon  expr_spec.lua  expr_spec.moon  helpers.lua  helpers.moon
